# NSU_3_session

./: README.md
PAK/10lab_Python/: README.md  main.py
PAK/11lab_Python/: main.py
PAK/13hw_Python/: tor4.py  tor4_test.py  training_loop.py
PAK/4lab_Python/: get_data.py  main.py  random_select.py
PAK/5lab_Python/: README.md  cinema_sessions.csv  cinema_sessions_refactored.csv  main.py  task.py
PAK/6lab_Python/: README.md  main.py
PAK/7lab_Python/: README.md  main.py
PAK/9lab_Python/: README.md  main.py
cpp/1lab_CPP/: CMakeLists.txt  main.cpp
cpp/2lab_CPP/: CMakeLists.txt  README.md  gtest_test.cpp  trit.cpp  trit.h
cpp/3lab_CPP/: CMakeLists.txt  main.cpp  text.txt  text1.txt  text2.txt
cpp/3lab_CPP/Blocks/: Blocks.cpp  Blocks.h  dump.cpp  dump.h  example.cpp  example.h  grep.cpp  grep.h  readfile.cpp  readfile.h  replace.cpp  replace.h  sort.cpp  sort.h  writefile.cpp  writefile.h
cpp/3lab_CPP/Utility/: Applier.cpp  Applier.h  parser.cpp  parser.h
cpp/4lab_CPP/: CMakeLists.txt  main.cpp
cpp/4lab_CPP/Classes/: Board.cpp  Board.h  Controller.cpp  Controller.h  Figure.cpp  Figure.h  Game.cpp  Game.h  Player.cpp  Player.h
